[Backend / feat : ] 푸드트럭 및 메뉴 이미지 필드 추가 적용